Changed profile picture and copy here and there.

--- a/aware.html
+++ b/aware.html
@@ -179,7 +179,7 @@
                                 <p>The dreams you have. </p> 
                                 <p>The flaws you must make peace with.</p> 
                                 <p>The gifts that are yours to give. </p>
-                                <p>I promise,the world needs them.</p>
+                                <p>The world needs them.</p>
                             </div>
                         </div>
                     </div>
