--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
 
                     <ul class="nk-nav nk-nav-right hidden-md-down" data-nav-mobile="#nk-nav-mobile">
                         <li>
-                            <a href="index.html#about"> Nutshell</a>
+                            <a href="index.html#about"> I</a>
                         </li>
                         
                         <li>
-                            <a href="portfolio.html"> Learnings</a>
+                            <a href="portfolio.html"> Live</a>
                         </li>
                         <li>
-                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSdIEEnv-NFHrThlpnr0FThMx5ykKlZJ-J1tzsJSl4OZy-ilNw/viewform?usp=sf_link" target="_blank"> Connect</a>
+                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSdIEEnv-NFHrThlpnr0FThMx5ykKlZJ-J1tzsJSl4OZy-ilNw/viewform?usp=sf_link" target="_blank"> Contact</a>
                         </li>
                         <!-- <li>
                             <a href="blog.html">Blog</a>
@@ -163,7 +163,7 @@
         <!-- START: Header Title -->
         <div class="nk-header-title nk-header-title-full">
             <div class="bg-image">
-                <div style="background-image: url('assets/images/header.jpg');"></div>
+                <div style="background-image: url('assets/images/header2.jpg');"></div>
                 <div class="bg-image-overlay" style="background-color: rgba(12, 12, 12, 0.6);"></div>
             </div>
             <div class="nk-header-table">
@@ -212,13 +212,14 @@
                     <div class="col-lg-8 offset-lg-2 text-xs-center">
                         <div class="nk-gap-4 mt-9"></div>
 
-                        <h2 class="display-4"> In a Nutshell </h2>
+                        <h2 class="display-4"> I </h2>
                         <div class="nk-gap mnt-5"></div>
-                        <div class="text-xs-center">I look for opportunity in problems and try to make the world a greener, better place to live in.
+                        <div class="text-xs-center">Story tell through design, <br> Look for opportunity in problems, <br> Make the world a greener, better place to live in.
                         </div>
+                        <br>
 
 
-                        <img src="assets/images/animation.gif" height="250px" alt="" class="nk-img-fit">
+                        <img src="assets/images/nya.JPG" height="250px" alt="" class="nk-img-fit">
 
                         <div class="nk-gap-4 mt-25"></div>
                     </div>
@@ -261,8 +262,8 @@
                                 <span class="pe-7s-graph1"></span>
                             </div>
                             <div class="nk-ibox-cont">
-                                <div class="nk-ibox-title">Get...</div>
-                                <div class="nk-ibox-text">Better</div>
+                                <div class="nk-ibox-title">Learn...</div>
+                                <div class="nk-ibox-text">More</div>
                             </div>
                         </div>
                     </div>
@@ -310,7 +311,7 @@
                                 <span class="pe-7s-science"></span>
                             </div>
                             <div class="nk-ibox-cont">
-                                <div class="nk-ibox-title">Always...</div>
+                                <div class="nk-ibox-title">Let's...</div>
                                 <div class="nk-ibox-text">Collaborate</div>
                             </div>
                         </div>
@@ -337,7 +338,7 @@
 
             <div class="nk-gap-4 mt-5"></div>
 
-            <h2 class="text-xs-center display-4">Life Learnings</h2>
+            <h2 class="text-xs-center display-4">Live </h2>
 
             <div class="nk-gap mnt-6"></div>
             <div class="container">
@@ -526,9 +527,9 @@
             <div class="container-fluid">
                 <!-- START: Carousel -->
                 <div class="nk-carousel nk-carousel-all-visible text-white" data-autoplay="" data-dots="true">
-                    <div class="nk-carousel-inner">
+                    <div class="">
                         <div>
-                            <div>
+                            <!-- <div>
                                 <blockquote class="nk-blockquote-style-1 text-white">
                                     <p>People who are unable to motivate themselves must be content with mediocrity no matter how impressive their other talents.</p>
                                     <cite>Andrew Carnegie</cite>
@@ -544,7 +545,7 @@
                                 </blockquote>
                                 <div class="nk-gap-3 mt-10"></div>
                             </div>
-                        </div>
+                        </div> -->
                         <div>
                             <div>
                                 <blockquote class="nk-blockquote-style-1 text-white">
