Edited menu links, removed social media, added a subscribe section.

--- a/gratitude.html
+++ b/gratitude.html
@@ -69,15 +69,15 @@
 
                     <ul class="nk-nav nk-nav-right hidden-md-down" data-nav-mobile="#nk-nav-mobile">
                         <li>
-                            <a href="index.html#about"> Nutshell</a>
+                            <a href="index.html#about"> I...</a>
                         </li>
                         
                         <li>
-                            <a href="portfolio.html"> Learnings</a>
+                            <a href="life.html"> Live</a>
                         </li>
-                        <li>
+                        <!-- <li>
                             <a href="https://docs.google.com/forms/d/e/1FAIpQLSdIEEnv-NFHrThlpnr0FThMx5ykKlZJ-J1tzsJSl4OZy-ilNw/viewform?usp=sf_link" target="_blank"> Connect</a>
-                        </li>
+                        </li> -->
                         <!-- <li>
                             <a href="blog.html">Blog</a>
                         </li> -->
@@ -145,7 +145,7 @@
                 <div class="container">
                     <div class="nk-nav-social">
                         <ul>
-                            <li><a href="https://twitter.com/nyaawira" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                            <!-- <li><a href="https://twitter.com/nyaawira" target="_blank"><i class="fa fa-twitter"></i></a></li> -->
                             <!-- <li><a href="https://www.facebook.com/unvabdesign/"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="https://dribbble.com/_nK"><i class="fa fa-dribbble"></i></a></li>
                             <li><a href="https://www.instagram.com/unvab/"><i class="fa fa-instagram"></i></a></li> -->
@@ -241,7 +241,7 @@
                 <div class="container text-xs-center">
                     <div class="nk-footer-social">
                         <ul>
-                           <li><a href="https://twitter.com/nyaawira" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                            
                             <!-- <li><a href=""><i class="fa fa-linkedinsquare"></i></a></li> -->
                             <!-- <li><a href="https://dribbble.com/_nK"><i class="fa fa-dribbble"></i></a></li>
                             <li><a href="https://www.instagram.com/unvab/"><i class="fa fa-instagram"></i></a></li> -->
@@ -249,7 +249,8 @@
                     </div>
 
                     <div class="nk-footer-text">
-                        <p>2017 &copy; Nya Wîra</p>
+                        <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSdIEEnv-NFHrThlpnr0FThMx5ykKlZJ-J1tzsJSl4OZy-ilNw/viewform?usp=sf_link" target="_blank"> Get in touch with me.</a></p>
+                        <p>2018 &copy; Nya Wîra</p>
                     </div>
                 </div>
             </div>
