--- a/life.html
+++ b/life.html
@@ -67,15 +67,15 @@
 
                     <ul class="nk-nav nk-nav-right hidden-md-down" data-nav-mobile="#nk-nav-mobile">
                        <li>
-                            <a href="index.html#about"> Nutshell</a>
+                            <a href="index.html#about"> I...</a>
                         </li>
                         
                         <li>
-                            <a href="portfolio.html"> Learnings</a>
+                            <a href="life.html"> Live</a>
                         </li>
-                        <li>
+                        <!-- <li>
                             <a href="https://docs.google.com/forms/d/e/1FAIpQLSdIEEnv-NFHrThlpnr0FThMx5ykKlZJ-J1tzsJSl4OZy-ilNw/viewform?usp=sf_link" target="_blank"> Connect</a>
-                        </li>
+                        </li> -->
                         <!-- <li>
                             <a href="blog.html">Blog</a>
                         </li> -->
@@ -157,8 +157,6 @@
 
 
     <div class="nk-main">
-
-
 
 
         <div class="container">
@@ -355,14 +353,14 @@
         <!--
     START: Footer
 -->
-        <footer class="nk-footer">
+      <footer class="nk-footer">
 
 
             <div class="nk-footer-cont">
                 <div class="container text-xs-center">
                     <div class="nk-footer-social">
                         <ul>
-                            <li><a href="https://twitter.com/nyaawira" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                            
                             <!-- <li><a href=""><i class="fa fa-linkedinsquare"></i></a></li> -->
                             <!-- <li><a href="https://dribbble.com/_nK"><i class="fa fa-dribbble"></i></a></li>
                             <li><a href="https://www.instagram.com/unvab/"><i class="fa fa-instagram"></i></a></li> -->
@@ -370,7 +368,8 @@
                     </div>
 
                     <div class="nk-footer-text">
-                        <p>2017 &copy; Nya Wîra</p>
+                        <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSdIEEnv-NFHrThlpnr0FThMx5ykKlZJ-J1tzsJSl4OZy-ilNw/viewform?usp=sf_link" target="_blank"> Get in touch with me.</a></p>
+                        <p>2018 &copy; Nya Wîra</p>
                     </div>
                 </div>
             </div>
@@ -378,7 +377,7 @@
         <!-- END: Footer -->
 
 
-    </div>
+   
 
 
 
