Added a more colorful and animation-inspired UI. Also added a section for Story Time.

--- a/fluffy.html
+++ b/fluffy.html
@@ -216,8 +216,8 @@
             </div>
         </div>
 
-        <img class="nk-img-fit" src="assets/images/fluffy2.jpg">
-
+       <!--  <img class="nk-img-fit" src="assets/images/fluffy2.jpg">
+ -->
         <!-- START: Pagination -->
         <div class="nk-pagination nk-pagination-center">
             <div class="container">
@@ -236,18 +236,18 @@
         <!--
     START: Footer
 -->
-       <footer class="nk-footer">
+     <!--   <footer class="nk-footer">
 
 
             <div class="nk-footer-cont">
                 <div class="container text-xs-center">
                     <div class="nk-footer-social">
-                        <ul>
+                        <ul> -->
                             
                             <!-- <li><a href=""><i class="fa fa-linkedinsquare"></i></a></li> -->
                             <!-- <li><a href="https://dribbble.com/_nK"><i class="fa fa-dribbble"></i></a></li>
                             <li><a href="https://www.instagram.com/unvab/"><i class="fa fa-instagram"></i></a></li> -->
-                        </ul>
+                       <!--  </ul>
                     </div>
 
                     <div class="nk-footer-text">
@@ -256,7 +256,7 @@
                     </div>
                 </div>
             </div>
-        </footer>
+        </footer> -->
         <!-- END: Footer -->
 
 
