--- a/affirm.html
+++ b/affirm.html
@@ -217,7 +217,7 @@
             </div>
         </div>
 
-        <img class="nk-img-fit" src="assets/images/affirm2.jpg">
+       <!--  <img class="nk-img-fit" src="assets/images/affirm2.jpg"> -->
 
         <!-- START: Pagination -->
         <div class="nk-pagination nk-pagination-center">
@@ -237,18 +237,18 @@
         <!--
     START: Footer
 -->
-         <footer class="nk-footer">
+         <!-- <footer class="nk-footer">
 
 
             <div class="nk-footer-cont">
                 <div class="container text-xs-center">
                     <div class="nk-footer-social">
-                        <ul>
+                        <ul> -->
                             
                             <!-- <li><a href=""><i class="fa fa-linkedinsquare"></i></a></li> -->
                             <!-- <li><a href="https://dribbble.com/_nK"><i class="fa fa-dribbble"></i></a></li>
                             <li><a href="https://www.instagram.com/unvab/"><i class="fa fa-instagram"></i></a></li> -->
-                        </ul>
+                       <!--  </ul>
                     </div>
 
                     <div class="nk-footer-text">
@@ -257,7 +257,7 @@
                     </div>
                 </div>
             </div>
-        </footer>
+        </footer> -->
         <!-- END: Footer -->
 
 
