--- a/gratitude.html
+++ b/gratitude.html
@@ -214,7 +214,7 @@
             </div>
         </div>
 
-        <img class="nk-img-fit" src="assets/images/gratitude2.jpg">
+       <!--  <img class="nk-img-fit" src="assets/images/gratitude2.jpg"> -->
 
         <!-- START: Pagination -->
         <div class="nk-pagination nk-pagination-center">
@@ -234,18 +234,18 @@
         <!--
     START: Footer
 -->
-        <footer class="nk-footer">
+      <!--   <footer class="nk-footer">
 
 
             <div class="nk-footer-cont">
                 <div class="container text-xs-center">
                     <div class="nk-footer-social">
-                        <ul>
+                        <ul> -->
                             
                             <!-- <li><a href=""><i class="fa fa-linkedinsquare"></i></a></li> -->
                             <!-- <li><a href="https://dribbble.com/_nK"><i class="fa fa-dribbble"></i></a></li>
                             <li><a href="https://www.instagram.com/unvab/"><i class="fa fa-instagram"></i></a></li> -->
-                        </ul>
+                      <!--   </ul>
                     </div>
 
                     <div class="nk-footer-text">
@@ -254,7 +254,7 @@
                     </div>
                 </div>
             </div>
-        </footer>
+        </footer> -->
         <!-- END: Footer -->
 
 
