--- a/life.html
+++ b/life.html
@@ -368,7 +368,7 @@
                     </div>
 
                     <div class="nk-footer-text">
-                        <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSdIEEnv-NFHrThlpnr0FThMx5ykKlZJ-J1tzsJSl4OZy-ilNw/viewform?usp=sf_link" target="_blank"> Get in touch with me.</a></p>
+                        <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSdIEEnv-NFHrThlpnr0FThMx5ykKlZJ-J1tzsJSl4OZy-ilNw/viewform?usp=sf_link" target="_blank"> Contact Me</a></p>
                         <p>2018 &copy; Nya Wîra</p>
                     </div>
                 </div>
