Went through and edited thought pieces on life.

--- a/affirm.html
+++ b/affirm.html
@@ -73,7 +73,7 @@
                         </li>
                         
                         <li>
-                            <a href="life.html"> Live</a>
+                            <a href="life.html"> Am Alive</a>
                         </li>
                         <!-- <li>
                             <a href="https://docs.google.com/forms/d/e/1FAIpQLSdIEEnv-NFHrThlpnr0FThMx5ykKlZJ-J1tzsJSl4OZy-ilNw/viewform?usp=sf_link" target="_blank"> Connect</a>
@@ -178,7 +178,7 @@
                                 <p> Write them down, say them out loud, pin them up on your walls, surround yourself with reminders of who you know you can be.</p>
                                 <p> Declare who you are and the things you want in life.</p>
                                 <p> I believe that the energy you emit is that which you will attract. It's something you must be intentional about. </p>
-                                <p> I practise speaking out affirmations. It helps me to remind myself, and the universe of who I am always becoming. </p>
+                                <p> I practise speaking affirmations. I think them and I say them. It reminds me, and the universe of who I am always becoming. </p>
 
 
                             </div>
