--- a/create.html
+++ b/create.html
@@ -73,7 +73,7 @@
                         </li>
                         
                         <li>
-                            <a href="life.html"> Live</a>
+                            <a href="life.html"> Am Alive</a>
                         </li>
                         <!-- <li>
                             <a href="https://docs.google.com/forms/d/e/1FAIpQLSdIEEnv-NFHrThlpnr0FThMx5ykKlZJ-J1tzsJSl4OZy-ilNw/viewform?usp=sf_link" target="_blank"> Connect</a>
@@ -173,11 +173,13 @@
                     <div class="col-lg-8">
                         <div class="nk-portfolio-info">
                             <div class="nk-portfolio-text">
-                                <p>We are all creative. Sometimes we forget how to connect with our source of creativity; but that's something we can always find again.</p>
+                                <p>We are all creative. </p>
+                                <p>Sometimes we forget how to connect with our source of creativity, but that's something we can always find again.</p>
                                 <p>How?? </p>
-                                <p> Get messy. Get dirty. Get away from your usual routine. </p>
-                                <p> Be a child, intentionally. What was your favorite thing to do as a child? Draw? Colour? Run around? Regardless of your age, do those things again - awaken the child within you. </p>
-                                <p>The more you flex your creative muscle, the stronger it gets.</p>
+                                <p> First, get some rest. </p>
+                                <p> Then, get messy, get untidy, get away from your usual routine. </p>
+                                <p> Be a child. What was your favorite thing to do as a child? Draw? Colour? Ride bikes outside? Do those things again - awaken the child within you! </p>
+                                <p>Remember, the more you flex your creative muscle, the stronger it becomes.</p>
                                 <p>Don't be discouraged - most of all, don't compare your spark to anyone else's. Find your spark, accept it, embrace it and get to know it more.</p>
                             </div>
                         </div>
