--- a/experiment.html
+++ b/experiment.html
@@ -73,7 +73,7 @@
                         </li>
                         
                         <li>
-                            <a href="life.html"> Live</a>
+                            <a href="life.html"> Am Alive</a>
                         </li>
                         <!-- <li>
                             <a href="https://docs.google.com/forms/d/e/1FAIpQLSdIEEnv-NFHrThlpnr0FThMx5ykKlZJ-J1tzsJSl4OZy-ilNw/viewform?usp=sf_link" target="_blank"> Connect</a>
@@ -175,12 +175,13 @@
                             <div class="nk-portfolio-text">
                                 <p>Treat everything you do like an experiment.</p>
                                 <p>Why?</p>
-                                <p>Having your mindset towards experimentation tunes you towards spotting lessons, identifying patterns and looking at situations more objectively.</p>
-                                <p> Innovation isn't about getting it wrong. It's about learning what needs to be done in order to get it right.  </p>
-                                <p>We all tend to get possessive over our ideas and even more when we turn them into projects that take our time, heart and energy...and that can be painful when we have been made to think that if an idea doesn't work then you have failed.</p>
-                                <p> How far from the truth!  </p>
-                                <p> Ideas work when they've been put through thorough testing, intentional learning and specific improvements. </p>
-                                <p> The next time something doesn't work, celebrate! Innovation is one space where getting it wrong is actually the right thing to be doing. </p>
+                                <p>Experiments tune your mind towards learning from lessons, identifying patterns and looking at situations objectively.</p>
+                                <p>We all tend to get possessive over our ideas and even more when we turn them into projects that take our time, heart and energy...
+                                These experiences become painful since we have been conditioned to believe that we have failed when something doesn't go according to plan.</p>
+                                <p> How can it be failure when you've gained so much knowledge and experience through your experiment/adventure?  </p>
+                                <p> Ideas work when they've been put through thorough testing, intentional learning and constant improvements. </p>
+                                <p> The next time something in your life doesn't work out, try to look at the situation as an experiment of sorts. Voila! An opportunity to learn has been presented to you. </p> 
+                                <p>Always remember that most times, getting it wrong simply means that you're one step closer to getting it right. </p>
 
                             </div>
                         </div>
