--- a/gratitude.html
+++ b/gratitude.html
@@ -73,7 +73,7 @@
                         </li>
                         
                         <li>
-                            <a href="life.html"> Live</a>
+                            <a href="life.html"> Am Alive</a>
                         </li>
                         <!-- <li>
                             <a href="https://docs.google.com/forms/d/e/1FAIpQLSdIEEnv-NFHrThlpnr0FThMx5ykKlZJ-J1tzsJSl4OZy-ilNw/viewform?usp=sf_link" target="_blank"> Connect</a>
@@ -168,7 +168,7 @@
             <div class="nk-portfolio-single">
 
                 <div class="nk-gap-4 mb-14"></div>
-                <h1 class="nk-portfolio-title display-4"> Count The Small Blessings </h1>
+                <h1 class="nk-portfolio-title display-4"> Count Your Blessings </h1>
                 <div class="row vertical-gap">
                     <div class="col-lg-8">
                         <div class="nk-portfolio-info">
