--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         </li>
                         
                         <li>
-                            <a href="life.html"> Live</a>
+                            <a href="life.html"> Am Alive</a>
                         </li>
                         
                         <!-- <li>
@@ -214,7 +214,7 @@
                         <div class="nk-gap mnt-5"></div>
                         <div class="text-xs-center" style="font-size: 17px;"> ...Design experiences, that solve problems, and make people's lives better.
                             <br>
-                        ...Spend a lot of time admiring art, illustrations and animations.
+                        ...Spend time admiring art, illustrations and animations.
                         <br>
                         ...Get lost in making the world a greener, better place to live in.
 
@@ -583,7 +583,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 offset-lg-2">
-                        <div class="text-xs-center">I love writing and creating stories! 
+                        <div class="text-xs-center">I've been writing and creating stories! 
                         </div>
                         <div class="text-xs-center"> I look forward to sharing some of those short stories right here, <br> along with art from my favorite illustrators very soon! 
                         </div>
