--- a/laugh.html
+++ b/laugh.html
@@ -73,7 +73,7 @@
                         </li>
                         
                         <li>
-                            <a href="life.html"> Live</a>
+                            <a href="life.html"> Am Alive</a>
                         </li>
                        <!--  <li>
                             <a href="https://docs.google.com/forms/d/e/1FAIpQLSdIEEnv-NFHrThlpnr0FThMx5ykKlZJ-J1tzsJSl4OZy-ilNw/viewform?usp=sf_link" target="_blank"> Connect</a>
@@ -177,7 +177,8 @@
                                 <p>The more you choose happiness, the more she chooses you.</p>
                                 <p>Life was never meant to be without joy, laughter and pure forms of silliness. </p>
                                   <p> I really took some time to get this. It's hard to laugh when sometimes you are deeply dissapointed/frustrated. </p>
-                                   <p> Here's how I've come round to this. You will laugh about your situation in the future - the past has been proof of that. So why not skip to the future, and find a way to laugh about your 'now'?? </p>
+                                   <p> Don't take yourself so seriously. Laugh at yourself, at those around you and at funny things that happened long ago. </p>
+                                   <p>Savour the moments!</p>
                             </div>
                         </div>
                     </div>
