--- a/walk.html
+++ b/walk.html
@@ -73,7 +73,7 @@
                         </li>
                         
                         <li>
-                            <a href="life.html"> Live</a>
+                            <a href="life.html"> Am Alive</a>
                         </li>
                        <!--  <li>
                             <a href="https://docs.google.com/forms/d/e/1FAIpQLSdIEEnv-NFHrThlpnr0FThMx5ykKlZJ-J1tzsJSl4OZy-ilNw/viewform?usp=sf_link" target="_blank"> Connect</a>
@@ -176,8 +176,8 @@
                                 <p>My grandmother always told me to walk with God. She says, "You will see so much in life - when you walk with God."</p>
                                 <p>Tembea na Mungu.</p>
                                 <p>My walk with God is one of the most profound aspects of my life. True to her words, He has shown me so much -about myself and life.</p>
-                                <p>Sometimes, what He has shown me, are things I did not like. But over time I've learned that when you keep going, roads that once seemed pointless/unbearable will lead you to the most beautiful places.</p>
-                                <p> The value of faith, hope and love is truly unmeasurable. </p>
+                                <p>Sometimes, what He has shown me, are things I was not comfortable facing. But over time I've learned that when you keep going, roads that once seemed pointless/unbearable will lead you to the most beautiful places.</p>
+                                <p> The value of faith in the Almighty, hope for a better tomorrow and unconditional love is truly unmeasurable. </p>
                             </div>
                         </div>
                     </div>
