--- a/single-template.html
+++ b/single-template.html
@@ -64,7 +64,7 @@
                         </li>
                         
                         <li>
-                            <a href="life.html"> Live</a>
+                            <a href="life.html"> Am Alive</a>
                         </li>
                         <!-- <li>
                             <a href="https://docs.google.com/forms/d/e/1FAIpQLSdIEEnv-NFHrThlpnr0FThMx5ykKlZJ-J1tzsJSl4OZy-ilNw/viewform?usp=sf_link" target="_blank"> Connect</a>
@@ -203,7 +203,7 @@
             </div>
         </div>
 
-        <img class="nk-img-fit" src="assets/images/portfolio-4-video-thumb.jpg">
+       <!--  <img class="nk-img-fit" src="assets/images/portfolio-4-video-thumb.jpg"> -->
 
         <!-- START: Pagination -->
         <div class="nk-pagination nk-pagination-center">
@@ -223,18 +223,18 @@
         <!--
     START: Footer
 -->
-        <footer class="nk-footer">
+        <!-- <footer class="nk-footer">
 
 
             <div class="nk-footer-cont">
                 <div class="container text-xs-center">
                     <div class="nk-footer-social">
-                        <ul>
+                        <ul> -->
                             
                             <!-- <li><a href=""><i class="fa fa-linkedinsquare"></i></a></li> -->
                             <!-- <li><a href="https://dribbble.com/_nK"><i class="fa fa-dribbble"></i></a></li>
                             <li><a href="https://www.instagram.com/unvab/"><i class="fa fa-instagram"></i></a></li> -->
-                        </ul>
+                        <!-- </ul>
                     </div>
 
                     <div class="nk-footer-text">
@@ -243,7 +243,7 @@
                     </div>
                 </div>
             </div>
-        </footer>
+        </footer> -->
         <!-- END: Footer -->
 
 
