Changed UI for short life practices. Removed confusing navigation through website. Added 'frail' poem to the Story section.

--- a/gratitude.html
+++ b/gratitude.html
@@ -67,21 +67,21 @@
                         <img src="assets/images/nyawiralogo-light.png" alt="" width="85">
                     </a>
 
-                    <ul class="nk-nav nk-nav-right hidden-md-down" data-nav-mobile="#nk-nav-mobile">
+                 <!--    <ul class="nk-nav nk-nav-right hidden-md-down" data-nav-mobile="#nk-nav-mobile">
                         <li>
                             <a href="index.html#about"> I...</a>
                         </li>
                         
                         <li>
                             <a href="life.html"> Am Alive</a>
-                        </li>
+                        </li> -->
                         <!-- <li>
                             <a href="https://docs.google.com/forms/d/e/1FAIpQLSdIEEnv-NFHrThlpnr0FThMx5ykKlZJ-J1tzsJSl4OZy-ilNw/viewform?usp=sf_link" target="_blank"> Connect</a>
                         </li> -->
                         <!-- <li>
                             <a href="blog.html">Blog</a>
                         </li> -->
-                    </ul>
+                    <!-- </ul>
 
                     <ul class="nk-nav nk-nav-right nk-nav-icons">
                         <li class="single-icon hidden-lg-up">
@@ -93,7 +93,7 @@
                                 </span>
                             </a>
                         </li>
-                    </ul>
+                    </ul> -->
                 </div>
             </div>
         </nav>
