--- a/single-template.html
+++ b/single-template.html
@@ -58,23 +58,23 @@
                         <img src="assets/images/nyawiralogo-light.png" alt="" width="85">
                     </a>
 
-                    <ul class="nk-nav nk-nav-right hidden-md-down" data-nav-mobile="#nk-nav-mobile">
-                        <li>
+                   <!--  <ul class="nk-nav nk-nav-right hidden-md-down" data-nav-mobile="#nk-nav-mobile"> -->
+                       <!--  <li>
                             <a href="index.html#about"> I...</a>
                         </li>
                         
                         <li>
                             <a href="life.html"> Am Alive</a>
-                        </li>
+                        </li> -->
                         <!-- <li>
                             <a href="https://docs.google.com/forms/d/e/1FAIpQLSdIEEnv-NFHrThlpnr0FThMx5ykKlZJ-J1tzsJSl4OZy-ilNw/viewform?usp=sf_link" target="_blank"> Connect</a>
                         </li> -->
                         <!-- <li>
                             <a href="blog.html">Blog</a>
                         </li> -->
-                    </ul>
+                   <!--  </ul> -->
 
-                    <ul class="nk-nav nk-nav-right nk-nav-icons">
+                   <!--  <ul class="nk-nav nk-nav-right nk-nav-icons">
                         <li class="single-icon hidden-lg-up">
                             <a href="#" class="nk-navbar-full-toggle">
                                 <span class="nk-icon-burger">
@@ -84,7 +84,7 @@
                                 </span>
                             </a>
                         </li>
-                    </ul>
+                    </ul> -->
                 </div>
             </div>
         </nav>
@@ -100,7 +100,7 @@
 -->
     <nav class="nk-navbar nk-navbar-full nk-navbar-align-center" id="nk-nav-mobile">
         <div class="nk-navbar-bg">
-            <div class="bg-image" style="background-image: url('assets/images/header.jpg')"></div>
+            <div class="bg-image" style=""></div>
         </div>
         <div class="nk-nav-table">
             <div class="nk-nav-row">
@@ -159,7 +159,7 @@
             <div class="nk-portfolio-single">
 
                 <div class="nk-gap-4 mb-14"></div>
-                <h1 class="nk-portfolio-title display-4">Video Project</h1>
+                <h1 class="nk-portfolio-title display-4">Title</h1>
                 <div class="row vertical-gap">
                     <div class="col-lg-8">
                         <div class="nk-portfolio-info">
@@ -172,30 +172,6 @@
                     <div class="col-lg-4">
                          <img src="assets/images/dogs.gif" height="250px" alt="" class="nk-img-fit">
 
-                        <!-- <table class="nk-portfolio-details">
-                            <tr>
-                                <td>
-                                    <strong>Client:</strong>
-                                </td>
-                                <td>Anna Doe</td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <strong>Date:</strong>
-                                </td>
-                                <td>06.20.2016</td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <strong>Share:</strong>
-                                </td>
-                                <td>
-                                    <a href="#" title="Share page on Facebook" data-share="facebook">Facebook</a>,
-                                    <a href="#" title="Share page on Twitter" data-share="twitter">Twitter</a>,
-                                    <a href="#" title="Share page on Pinterest" data-share="pinterest">Pinterest</a>
-                                </td>
-                            </tr>
-                        </table> -->
                     </div>
                 </div>
                 <div class="nk-gap-4 mt-14"></div>
