--- a/experiment.html
+++ b/experiment.html
@@ -67,23 +67,24 @@
                         <img src="assets/images/nyawiralogo-light.png" alt="" width="85">
                     </a>
 
-                    <ul class="nk-nav nk-nav-right hidden-md-down" data-nav-mobile="#nk-nav-mobile">
-                        <li>
+                    
+                   <!--  <ul class="nk-nav nk-nav-right hidden-md-down" data-nav-mobile="#nk-nav-mobile"> -->
+                       <!--  <li>
                             <a href="index.html#about"> I...</a>
                         </li>
                         
                         <li>
                             <a href="life.html"> Am Alive</a>
-                        </li>
+                        </li> -->
                         <!-- <li>
                             <a href="https://docs.google.com/forms/d/e/1FAIpQLSdIEEnv-NFHrThlpnr0FThMx5ykKlZJ-J1tzsJSl4OZy-ilNw/viewform?usp=sf_link" target="_blank"> Connect</a>
                         </li> -->
                         <!-- <li>
                             <a href="blog.html">Blog</a>
                         </li> -->
-                    </ul>
+                   <!--  </ul> -->
 
-                    <ul class="nk-nav nk-nav-right nk-nav-icons">
+                   <!--  <ul class="nk-nav nk-nav-right nk-nav-icons">
                         <li class="single-icon hidden-lg-up">
                             <a href="#" class="nk-navbar-full-toggle">
                                 <span class="nk-icon-burger">
@@ -93,7 +94,7 @@
                                 </span>
                             </a>
                         </li>
-                    </ul>
+                    </ul> -->
                 </div>
             </div>
         </nav>
